# zerostone

./: .gitignore  Cargo.toml  README.md  ci-local.sh  explore.toml  sz.sh
.claude/: benchmark_results.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs  circular_buffer.rs
benchmarks/: accuracy_benchmark.py  benchmark_results.md  drift_benchmark.py  hybrid_benchmark.py  latency_benchmark.py  ms5_comparison.py  param_sweep.py  spikeforest_benchmark.py  sweep_benchmark.py
examples/: benchmark_viz.rs  explore.rs  filter_demo.rs  pipeline_demo.rs  spatial_demo.rs
examples/common/: mod.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/docs/: memory_map.md  npu_assessment.md  power_budget.md
firmware/src/: ble.rs  classifier.rs  dsp.rs  intan.rs  integration.rs  lib.rs  main.rs  online_learn.rs  pipeline.rs  ring_buffer.rs  stats.rs  synth.rs  watchdog.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/benchmarks/: bench_covariance.py  bench_filters.py  bench_riemannian.py  bench_spectral.py  run_all.py
python/examples/motor_imagery/: README.md  bci_competition_iv_2a.py  benchmark.py  benchmark_v2.py  load_data.py  sklearn_compat.py  validate_pipeline.py
python/examples/spike_sorting/: tutorial.py
python/examples/ssvep/: benchmark_ssvep.py
python/src/: analysis.rs  artifact.rs  cca.rs  connectivity.rs  csp.rs  deconvolution.rs  denoise.rs  detection.rs  drift.rs  edf.rs  entropy.rs  erp.rs  ersp.rs  filters.rs  ica.rs  isi.rs  kalman.rs  lda.rs  lib.rs  localize.rs  mda.rs  metrics.rs  notch.rs  online_kmeans.rs  pac.rs  percentile.rs  pipeline.rs  probe.rs  quality.rs  resampling.rs  riemannian.rs  sorter.rs  spatial.rs  spectral.rs  spike_sort.rs  stats.rs  streaming.rs  sync.rs  template_subtract.rs  utils.rs  (+6 more)
python/tests/: test_analysis.py  test_artifact.py  test_cca.py  test_connectivity.py  test_csp.py  test_deconvolution.py  test_denoise.py  test_detection.py  test_drift.py  test_edf.py  test_entropy.py  test_erp.py  test_ersp.py  test_filters.py  test_hilbert.py  test_ica.py  test_iir.py  test_isi.py  test_kalman.py  test_lda.py  test_localize.py  test_mda.py  test_mdm.py  test_metrics.py  test_notch.py  test_online_cov.py  test_online_kmeans.py  test_online_sorter.py  test_pac.py  test_percentile.py  test_pipeline.py  test_probe.py  test_quality.py  test_recenter.py  test_resampling.py  test_riemannian.py  test_scipy_validation.py  test_sklearn_compat.py  test_sorter.py  test_spatial.py  (+14 more)
python/validation/: compare_scipy.py
python/zpybci/: __init__.py  sklearn.py  spikeinterface.py  synthetic.py
src/: artifact.rs  bandpower.rs  buffer.rs  cca.rs  connectivity.rs  csp.rs  decimate.rs  deconvolution.rs  denoise.rs  detector.rs  drift.rs  edf.rs  entropy.rs  envelope.rs  erp.rs  ersp.rs  fft.rs  float.rs  gmm.rs  hilbert.rs  ica.rs  interpolate.rs  isi.rs  kalman.rs  lda.rs  lib.rs  linalg.rs  localize.rs  main.rs  matched_filter.rs  mda.rs  metrics.rs  notch.rs  online_kmeans.rs  pac.rs  percentile.rs  pipeline.rs  probe.rs  quality.rs  riemannian.rs  (+17 more)
src/filter/: ac.rs  car.rs  fir.rs  iir.rs  laplacian.rs  lms.rs  median.rs  mod.rs  nlms.rs
tests/: bench_regression.rs  determinism_test.rs  edge_case_tests.rs  property_tests.proptest-regressions  property_tests.rs  replay_tests.rs
