[package]
name = "zerostone"
version = "0.1.0"
edition = "2021"
description = "High-performance, zero-allocation signal processing primitives for BCI and real-time systems"
license = "AGPL-3.0"
keywords = ["bci", "signal-processing", "dsp", "neuroscience", "no-std"]
categories = ["science", "no-std::no-alloc", "embedded"]

[dependencies]
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
plotters = "0.3"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "filter_demo"
path = "examples/filter_demo.rs"
