[package]
name = "zerostone-firmware"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
# Zerostone library (f32 mode for embedded)
zerostone = { path = "..", default-features = false, features = ["f32"] }

# Embassy runtime
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.3", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote"] }
embassy-sync = { version = "0.6", features = ["defmt"] }

# Embedded HAL
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

# Logging and panic
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Utilities
static_cell = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
